# TagDeck

./: # Product Requirements Document (PRD).md  .gitignore  README.md  REPOSITORY_SUMMARY.md  THE_STORY_OF_THIS_REPO.md  index.html  package-lock.json  package.json
.github/instructions/: agent-instructions-file.instructions.md
Docs/: BpmKeyAnalysis.md  CHANGELOG.md  KeyCommands.md  MixedInKeyIntegration.md  PRD.md  RealTimeSync.md  SearchSpecs.md  SyncStrategy.md  TagGroupsPlan.md
src/: App.css  App.tsx  LogsWindow.tsx  Panel.css  main.tsx  types.ts
src-tauri/: Cargo.toml  fetch-library-aarch64-apple-darwin  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apple_music.rs  commands.rs  db.rs  lib.rs  library_parser.rs  library_watcher.rs  logging.rs  main.rs  metadata.rs  models.rs  system_library.rs  toggle_logs.rs  undo.rs
src-tauri/swift/: FetchLibrary.swift
src/components/: AppLogo.tsx  BpmCounter.tsx  CopyPlaylistsModal.tsx  DebugContext.tsx  LibraryImporter.tsx  MetadataViewer.tsx  Player.tsx  SearchHelpPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StarRating.tsx  TagDeck.tsx  TagEditor.tsx  Toast.tsx  TrackList.tsx
src/utils/: searchParser.ts  test-parser.ts
