[package]
name = "tagdeck"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tagdeck"

[lib]
name = "tagdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.21.1" 
rusqlite = { version = "0.38.0", features = ["bundled"] }
plist = "1.8.0"
urlencoding = "2.1.3"
chrono = { version = "0.4.43", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2"
url = "2.5.8"
tauri-plugin-shell = "2.3.4"
